<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p124">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_loanActivity"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/loanBook"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_loanBook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/loanBookAuthor"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_loanBookAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="text"/>

    </LinearLayout>

    <Button
        android:id="@+id/confirmLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loanAfterQuery"
        android:layout_marginStart="340dp"
        android:layout_marginLeft="340dp" />

    <TextView
        android:id="@+id/tv_loanState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/bt_returnMyBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="330dp"
        android:layout_marginLeft="330dp"
        android:text="@string/returnMyBook"
        android:textColor="#000000"
        android:background="@android:color/transparent" />

</LinearLayout>